syntax = "proto3";
package pt.tecnico.grpc;

message RegisterRequest {
	string client = 1;
	uint32 balance = 2;
}

message RegisterResponse {
}

message ConsultRequest {
    string client = 1;
}

message ConsultResponse {
    int32 response = 1;
}

message FundAllRequest {
  int32 amount = 1;
}

message FundAllResponse {
  // empty
}

service BankingService {
	rpc register(RegisterRequest) returns (RegisterResponse);
    rpc consult(ConsultRequest) returns (ConsultResponse);
    rpc fundAll(FundAllRequest) returns (FundAllResponse);
}
